[project]
name = "charformer-flax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flax[all]>=0.11.1",
    "jax>=0.7.0; platform_system == 'Darwin'",
    "jax[cuda12]>=0.7.0; platform_system == 'Linux'",
    "wandb>=0.21.0",
]
